--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ header {
 }
 
 header .content-wrapper { 
-    padding: 0 20px;
+    padding: 0 20px 80px 0;
 }
 
 header nav {
@@ -116,7 +116,7 @@ header nav {
     align-items: center;
     flex-flow: row wrap;
     width: 100%;
-    margin: 30px 0 60px 0;
+    margin: 30px 0 80px 0;
 }
 
 header nav ul {
